# named-pipe-example

./: .gitignore  CMakeLists.txt  README.md
source/: pipe_handler.c  pipe_handler.h  read_ack.c  read_loop.c  readpipe.c  write_ack.c  writepipe.c
